# cmdlet

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: README.md  architecture.md  diagrams.md  overview.md  second-brain-template-seeding.md  system-design.md
public/: lock.html
scripts/: build-dmg.sh
src/: autocomplete.ts  executor.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  lock.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: academic.toml  apple-notes.toml  books.toml  clipboard.toml  events.toml  files.toml  keyboard-lock.toml  notifications.toml  open-app.toml  planner.toml  quit.toml  reminders.toml  save-note.toml  second-brain.toml  settings.toml  spotify.toml  storage.toml  tasks.toml  timer.toml  web-search.toml
src-tauri/resources/: second_brain_template.xlsm
src-tauri/src/: academic.rs  apple_notes.rs  books.rs  calendar.rs  event_history.rs  files.rs  keyboard_lock.rs  lib.rs  main.rs  note_history.rs  notifications.rs  planner.rs  planner_data.rs  reminder_history.rs  reminders.rs  second_brain.rs  settings.rs  spotify.rs  storage.rs  tasks.rs
src/commands/: alert.ts  assignment.ts  book.ts  brainCommands.ts  calc.ts  catalog.ts  class.ts  clear.ts  clipboard.ts  dashboard.ts  event.ts  exam.ts  export.ts  file.ts  group.ts  help.ts  index.ts  loaders.ts  note.ts  notify.ts  open.ts  progress.ts  reminder.ts  settings.ts  specs.ts  spotify.ts  task.ts  timer.ts  web.ts
src/lib/: perf.ts  (+1 more)
(+28 files in other folders)
