[package]
name = "cmdlet"
version = "0.1.0"
description = "A lightweight Raycast-inspired command palette for macOS"
authors = ["trangnguyen"]
edition = "2021"

[lib]
name = "cmdlet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
base64 = "0.22"
core-graphics = "0.25"
core-foundation = "0.10"
zip = "2"
